# Blitz-Bench

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
scripts/: build_dataset.py  quick_test.sh  validate_dataset.py
src/saturated_blitz_bench/: __init__.py  __main__.py  cli.py  config.py  dataset_builder.py
src/saturated_blitz_bench/core/: dry_run_client.py  runner.py  scheduler.py  streaming_client.py  token_counter.py
src/saturated_blitz_bench/metrics/: calculator.py  collector.py  concurrency_tracker.py  timeseries.py
src/saturated_blitz_bench/report/: generator.py  html_report.py  json_report.py
src/saturated_blitz_bench/report/templates/: report.html.j2
src/saturated_blitz_bench/utils/: helpers.py  logging.py
src/saturated_blitz_bench/workload/: categories.py  loader.py  tool_validator.py
tests/: test_build_dataset.py  test_dry_run.py  test_metrics.py  test_runner.py  test_scheduler.py  test_streaming_client.py  test_tool_validator.py
